# TaskManagementAPI

./: .gitignore  README.md  main.py  pyproject.toml
api/: auth.py  deps.py  tasks.py  users.py
core/: cache.py  connection_manager.py  security.py
db/: config.py  session.py
models/: __init__.py  task.py  user.py
schemas/: auth.py  task.py
services/: task_service.py  user_service.py
tests/: conftest.py  test_api_auth.py  test_api_tasks.py  test_api_users.py  test_auth_flow.py  test_security.py  test_task_service.py  test_user_service.py  test_websocket.py
